# the-coin-guide

./: .gitignore  CMakeLists.txt  README.md  about.md  build_error.txt  build_errors.txt  build_output.txt  mod.json  real_errors.txt  resize_badges.py  shrink_badges.py
.github/workflows/: multi-platform.yml
src/: CoinRatingFilterPopup.cpp  CoinRatingFilterPopup.hpp  CoinRatingPopup.cpp  CoinRatingPopup.hpp  CoinSearchPopup.cpp  CoinSearchPopup.hpp  CoinSubmitPopup.hpp  Database.cpp  Database.hpp  main.cpp
src_backup/: CoinGuidePopup.cpp  CoinGuidePopup.hpp  CoinSearchPopup.cpp  CoinSearchPopup.hpp  CoinSubmitPopup.cpp  Database.cpp  Database.hpp  main.cpp
